// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fileParser parse invalid file 1`] = `
Object {
  "metadata": Object {
    "acrhivedProjects": Array [],
    "activeProjects": Array [],
  },
  "records": Array [],
}
`;

exports[`fileParser parse valid data 1`] = `
Object {
  "metadata": Object {
    "acrhivedProjects": Array [
      CompoundName {
        "name": "Another",
        "parent": CompoundName {
          "name": "Other",
          "parent": CompoundName {
            "name": "Test",
          },
        },
      },
      CompoundName {
        "name": "Test2",
      },
    ],
    "activeProjects": Array [
      CompoundName {
        "name": "First",
      },
      CompoundName {
        "name": "Something",
        "parent": CompoundName {
          "name": "Second",
        },
      },
      CompoundName {
        "name": "Third",
      },
    ],
  },
  "records": Array [
    Object {
      "day": 2022-05-22T00:00:00.000Z,
      "projects": Array [
        Object {
          "mark": 1,
          "name": CompoundName {
            "name": "First",
          },
        },
        Object {
          "mark": 2,
          "name": CompoundName {
            "name": "Something",
            "parent": CompoundName {
              "name": "Second",
            },
          },
        },
        Object {
          "mark": 3,
          "name": CompoundName {
            "name": "Third",
          },
        },
        Object {
          "mark": 1,
          "name": CompoundName {
            "name": "Another",
            "parent": CompoundName {
              "name": "Other",
              "parent": CompoundName {
                "name": "Test",
              },
            },
          },
        },
      ],
    },
    Object {
      "day": 2022-05-23T00:00:00.000Z,
      "projects": Array [
        Object {
          "mark": 4,
          "name": CompoundName {
            "name": "First",
          },
        },
        Object {
          "mark": 5,
          "name": CompoundName {
            "name": "Something",
            "parent": CompoundName {
              "name": "Second",
            },
          },
        },
        Object {
          "mark": 2,
          "name": CompoundName {
            "name": "Third",
          },
        },
        Object {
          "mark": undefined,
          "name": CompoundName {
            "name": "Another",
            "parent": CompoundName {
              "name": "Other",
              "parent": CompoundName {
                "name": "Test",
              },
            },
          },
        },
        Object {
          "mark": undefined,
          "name": CompoundName {
            "name": "Test2",
          },
        },
      ],
    },
  ],
}
`;

exports[`fileParser parse valid data 2`] = `
Object {
  "metadata": Object {
    "acrhivedProjects": Array [
      CompoundName {
        "name": "Todo.txt Tool",
      },
    ],
    "activeProjects": Array [
      CompoundName {
        "name": "Test Learning",
      },
      CompoundName {
        "name": "Non-Fiction Reading",
      },
    ],
  },
  "records": Array [],
}
`;

exports[`fileParser parse valid data 3`] = `
Object {
  "metadata": Object {
    "acrhivedProjects": Array [],
    "activeProjects": Array [
      CompoundName {
        "name": "First",
      },
    ],
  },
  "records": Array [],
}
`;

exports[`fileParser parse valid data 4`] = `
Object {
  "metadata": Object {
    "acrhivedProjects": Array [
      CompoundName {
        "name": "Second",
      },
    ],
    "activeProjects": Array [
      CompoundName {
        "name": "First",
      },
    ],
  },
  "records": Array [
    Object {
      "day": 2022-05-22T00:00:00.000Z,
      "projects": Array [
        Object {
          "mark": 1,
          "name": CompoundName {
            "name": "First",
          },
        },
      ],
    },
    Object {
      "day": 2022-05-23T00:00:00.000Z,
      "projects": Array [
        Object {
          "mark": 2,
          "name": CompoundName {
            "name": "First",
          },
        },
      ],
    },
  ],
}
`;
